--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.content-player-container {
+  display: inline-block;
+  flex: 0.6;
+  width: calc(100% - 200px);
+}
+
+.player-bar {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 0px;
+  background-color: var(--neu-gray);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.audio-player {
+  width: 90% !important;
+  height: 100% !important;
+  margin: 0 !important;
+  padding: 5px 5px 5px 5px !important;
+  border: none !important;
+  box-shadow: none !important;
+  display: none !important;
 }
